--- a/index.html
+++ b/index.html
@@ -175,7 +175,17 @@
 				<div class="scrollbar agileits w3layouts" id="style-2">
 					<div class="activity-row agileits w3layouts">
 						<div class="activity-img agileits w3layouts">
-							<h6>2018-2020</h6>
+							<h6>2021-2022</h6>
+						</div>
+						<div class="activity-desc agileits w3layouts">
+							<h5>NIBM GLOBAL (A Unit of Kingster Education Pvt Ltd)</h5>
+							<p class="para-agileits-w3layouts">MBA</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="activity-row agileits w3layouts">
+						<div class="activity-img agileits w3layouts">
+							<h6>2017-2020</h6>
 						</div>
 						<div class="activity-desc agileits w3layouts">
 							<h5>Singhania University</h5>
